# chirpstack-fuota-client

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  generate_protos.py  pyproject.toml
examples/: basic.py  fuota.py  integration.py
src/chirpstack_client/: __init__.py  models.py
src/chirpstack_client/api/: __init__.py  application.py  device.py  tenant.py
src/chirpstack_client/api/integration/: base.py
src/chirpstack_client/proto/fuota/: fuota_pb2.py  fuota_pb2_grpc.py
src/chirpstack_client/utils/: helpers.py  logging.py
src/chirpstack_fuota_client/: __init__.py
src/chirpstack_fuota_client/api/: device.py  device_profile.py  gateway.py
src/chirpstack_fuota_client/api/fuota/: __init__.py  service.py  utils.py
src/chirpstack_fuota_client/api/integration/: __init__.py  http_integration.py  integration_service.py
src/chirpstack_fuota_client/proto/fuota/: __init__.py
src/chirpstack_fuota_client/utils/: logging.py
tests/: test_fuota_service.py  test_fuota_utils.py
